main page overflow fix

--- a/mainDesign.css
+++ b/mainDesign.css
@@ -1,3 +1,9 @@
+* {
+  overflow:inherit;
+}
+
+
+
 /* Main body inheritance styling */
 * {
   box-sizing: border-box;
